--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "finolino-test",
-  "private": true,
+  "private": true, 
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build-only": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "watch-tsc": "tsc --watch --noEmit",
+    "start": "npm-run-all --parallel type-check dev",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview --port 4173",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@vueuse/core": "^9.12.0",
@@ -24,6 +29,7 @@
     "sass": "^1.58.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.0.24",
+    "npm-run-all": "^4.1.5"
   }
 }
