--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finolino-test",
-  "private": true, 
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -17,7 +17,8 @@
     "@vueuse/core": "^9.12.0",
     "swiper": "^9.0.3",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
@@ -25,11 +26,11 @@
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-vue": "^9.9.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.8.4",
     "sass": "^1.58.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24",
-    "npm-run-all": "^4.1.5"
+    "vue-tsc": "^1.0.24"
   }
 }
