--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.58.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
+    "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.0.24"
   }
 }
