--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueform/slider": "^2.1.7",
     "@vueuse/core": "^9.12.0",
     "swiper": "^9.0.3",
     "vue": "^3.2.45",
